--- a/package.json
+++ b/package.json
@@ -1,8 +1,50 @@
 {
-  "name": "memopad",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Jung <8735132@gmail.com>",
-  "license": "MIT",
-  "repository": "git@github.com:JungHanYoung/memopad_typescript.git"
+	"name": "memopad",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Jung <8735132@gmail.com>",
+	"license": "MIT",
+	"repository": "git@github.com:JungHanYoung/memopad_typescript.git",
+	"scripts": {
+		"dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./server/main.ts --watch server",
+		"start": "cross-env NODE_ENV=production node ./build/main.js",
+		"build": "webpack -p",
+		"clean": "rm -rf build public/bundle.js"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.18.3",
+		"express": "^4.16.3",
+		"express-session": "^1.15.6",
+		"mongoose": "^5.1.2",
+		"morgan": "^1.9.0",
+		"react": "^16.4.0",
+		"react-dom": "^16.4.0"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.1",
+		"@types/body-parser": "^1.17.0",
+		"@types/express": "^4.11.1",
+		"@types/express-session": "^1.15.8",
+		"@types/mongoose": "^5.0.14",
+		"@types/morgan": "^1.7.35",
+		"@types/node": "^10.1.2",
+		"@types/react": "^16.3.14",
+		"@types/react-dom": "^16.0.5",
+		"@types/webpack": "^4.4.0",
+		"@types/webpack-dev-server": "^2.9.4",
+		"awesome-typescript-loader": "^5.0.0",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.4",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"source-map-loader": "^0.2.3",
+		"ts-loader": "^4.3.0",
+		"ts-node": "^6.0.5",
+		"typescript": "^2.8.3",
+		"uglifyjs-webpack-plugin": "^1.2.5",
+		"webpack": "^4.8.3",
+		"webpack-cli": "^2.1.4",
+		"webpack-dev-server": "^3.1.4"
+	}
 }
