--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"clean": "rm -rf build public/bundle.js"
 	},
 	"dependencies": {
+		"@material-ui/core": "^1.1.0",
+		"axios": "^0.18.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
 		"express": "^4.16.3",
@@ -19,7 +21,14 @@
 		"mongoose": "^5.1.2",
 		"morgan": "^1.9.0",
 		"react": "^16.4.0",
-		"react-dom": "^16.4.0"
+		"react-dom": "^16.4.0",
+		"react-redux": "^5.0.7",
+		"react-router-dom": "^4.2.2",
+		"react-timeago": "^4.1.9",
+		"react-toastify": "^4.0.1",
+		"redux": "^4.0.0",
+		"redux-thunk": "^2.2.0",
+		"styled-components": "^3.3.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.1",
@@ -31,6 +40,8 @@
 		"@types/node": "^10.1.2",
 		"@types/react": "^16.3.14",
 		"@types/react-dom": "^16.0.5",
+		"@types/react-redux": "^6.0.0",
+		"@types/react-router-dom": "^4.2.6",
 		"@types/webpack": "^4.4.0",
 		"@types/webpack-dev-server": "^2.9.4",
 		"awesome-typescript-loader": "^5.0.0",
@@ -38,7 +49,12 @@
 		"babel-loader": "^7.1.4",
 		"babel-preset-latest": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
+		"css-loader": "^0.28.11",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"node-sass": "^4.9.0",
+		"sass-loader": "^7.0.1",
 		"source-map-loader": "^0.2.3",
+		"style-loader": "^0.21.0",
 		"ts-loader": "^4.3.0",
 		"ts-node": "^6.0.5",
 		"typescript": "^2.8.3",
