--- a/package.json
+++ b/package.json
@@ -1,8 +1,44 @@
 {
-  "name": "memopad",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Jung <8735132@gmail.com>",
-  "license": "MIT",
-  "repository": "git@github.com:JungHanYoung/memopad_typescript.git"
+	"name": "memopad",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Jung <8735132@gmail.com>",
+	"license": "MIT",
+	"repository": "git@github.com:JungHanYoung/memopad_typescript.git",
+	"scripts": {
+		"dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./server/index.ts --watch server"
+	},
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"express": "^4.16.3",
+		"express-graphql": "^0.6.12",
+		"graphql": "^0.13.2",
+		"graphql-import": "^0.6.0",
+		"graphql-tools": "^3.0.2",
+		"morgan": "^1.9.0",
+		"mysql": "^2.15.0",
+		"react": "^16.4.0",
+		"react-dom": "^16.4.0",
+		"typeorm": "^0.2.6"
+	},
+	"devDependencies": {
+		"@types/body-parser": "^1.17.0",
+		"@types/express": "^4.11.1",
+		"@types/express-graphql": "^0.6.1",
+		"@types/morgan": "^1.7.35",
+		"awesome-typescript-loader": "^5.0.0",
+		"babel-core": "^6.26.3",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"css-loader": "^0.28.11",
+		"node-sass": "^4.9.0",
+		"nodemon": "^1.17.5",
+		"sass-loader": "^7.0.1",
+		"style-loader": "^0.21.0",
+		"ts-node": "^6.0.5",
+		"typescript": "^2.8.3",
+		"webpack": "^4.9.1",
+		"webpack-cli": "^2.1.4",
+		"webpack-dev-server": "^3.1.4"
+	}
 }
